[package]
name = "lulu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
aunty = { git = "https://github.com/Radbuglet/aunty.git", rev = "b473aadd44bdd64d94b1378e7da7f2c959f7ef25" }
color-backtrace = "0.6.1"
colored = "2.1.0"
env_logger = "0.10.1"
hashbrown = "0.14.3"
log = "0.4.20"
rustc-hash = "1.1.0"
smallvec = "1.13.1"
symbolique = { git = "https://github.com/Radbuglet/symbolique.git", rev = "6cdf57a96e339a9c634289b777e4a9ef6cb26388" }
unicode-xid = "0.2.4"
